// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: branches not enabled 1`] = `
<Fragment>
  <div
    className="page-header big-spacer-bottom"
  >
    <h1
      className="page-title"
    >
      onboarding.tutorial.with.jenkins.title
    </h1>
  </div>
  <PreRequisitesStep
    alm="bitbucket"
    branchesEnabled={false}
    finished={false}
    onChangeSkipNextTime={[Function]}
    onDone={[Function]}
    onOpen={[Function]}
    open={true}
    skipNextTime={false}
  />
  <PipelineStep
    alm="bitbucket"
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
  />
  <WebhookStep
    alm="bitbucket"
    branchesEnabled={false}
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
    projectBinding={
      Object {
        "alm": "bitbucket",
        "key": "foo",
        "monorepo": true,
        "repository": "PROJECT_KEY",
        "slug": "repo-slug",
      }
    }
  />
  <withCLanguageFeature(JenkinsfileStep)
    baseUrl=""
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
  />
  <AllSetStep
    alm="bitbucket"
    open={false}
    stepNumber={4}
    willRefreshAutomatically={true}
  />
</Fragment>
`;

exports[`should render correctly: default 1`] = `
<Fragment>
  <div
    className="page-header big-spacer-bottom"
  >
    <h1
      className="page-title"
    >
      onboarding.tutorial.with.jenkins.title
    </h1>
  </div>
  <PreRequisitesStep
    alm="bitbucket"
    branchesEnabled={true}
    finished={false}
    onChangeSkipNextTime={[Function]}
    onDone={[Function]}
    onOpen={[Function]}
    open={true}
    skipNextTime={false}
  />
  <MultiBranchPipelineStep
    alm="bitbucket"
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
    projectBinding={
      Object {
        "alm": "bitbucket",
        "key": "foo",
        "monorepo": true,
        "repository": "PROJECT_KEY",
        "slug": "repo-slug",
      }
    }
  />
  <WebhookStep
    alm="bitbucket"
    branchesEnabled={true}
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
    projectBinding={
      Object {
        "alm": "bitbucket",
        "key": "foo",
        "monorepo": true,
        "repository": "PROJECT_KEY",
        "slug": "repo-slug",
      }
    }
  />
  <withCLanguageFeature(JenkinsfileStep)
    baseUrl=""
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    finished={false}
    onDone={[Function]}
    onOpen={[Function]}
    open={false}
  />
  <AllSetStep
    alm="bitbucket"
    open={false}
    stepNumber={4}
    willRefreshAutomatically={true}
  />
</Fragment>
`;

exports[`should render correctly: no project binding 1`] = `
<Fragment>
  <div
    className="page-header big-spacer-bottom"
  >
    <h1
      className="page-title"
    >
      onboarding.tutorial.with.jenkins.title
    </h1>
  </div>
  <SelectAlmStep
    onCheck={[Function]}
    onOpen={[Function]}
    open={true}
  />
</Fragment>
`;
